<resources>
    <string name="app_name">QuizApp-Android</string>
    <string name="a0">A0</string>
    <string name="question">Question</string>
    <string name="a1">A1</string>
    <string name="textview">TextView</string>
    <string name="a2">A2</string>
    <string name="score_0_0">Score: 0 / 0</string>
    <string name="go_next">Go Next</string>
    <string name="your_score">Your Score</string>
    <string name="_0_0">0 / 0</string>
    <string name="again">Again</string>
</resources>
