<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/questionText" android:textStyle="bold"
            android:textSize="32sp" app:layout_constraintVertical_bias="0.0" android:layout_marginTop="48dp"/>
    <Button
            android:text="@string/a0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/a0button" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/questionText" android:onClick="checkAnswer"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/a1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/a1button"
            android:onClick="checkAnswer"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/a0button" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/a2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/a2button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/a1button" android:onClick="checkAnswer"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/score_0_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreTextView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/go_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goNextButton" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/a2button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:orientation="vertical"
            android:onClick="goNext"/>

</android.support.constraint.ConstraintLayout>