<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultActivity">

    <TextView
            android:text="@string/your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"
            android:textSize="24sp" android:layout_marginTop="64dp"/>
    <TextView
            android:text="@string/_0_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreTextView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textSize="48sp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text="@string/again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/againButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="48dp" android:onClick="again"/>
</android.support.constraint.ConstraintLayout>